--- a/BLE.Client/BLE.Client/Pages/DeviceListPage.xaml
+++ b/BLE.Client/BLE.Client/Pages/DeviceListPage.xaml
@@ -1,11 +1,123 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<pages:BaseTabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<pages:BaseMasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:BLE.Client.Pages;assembly=BLE.Client"
              x:Class="BLE.Client.Pages.DeviceListPage"
              Title="Discover devices"
              x:Name="DevicePage">
-  <pages:BaseTabbedPage.Resources>
+    <MasterDetailPage.Master>
+        <ContentPage Title = "Test">
+            <StackLayout>
+                <Button Text="Detail1" />
+                <Button Text="Detail2" />
+                <Button Text="Detail3" />
+            </StackLayout>
+        </ContentPage>
+    </MasterDetailPage.Master>
+
+
+    <MasterDetailPage.Detail>
+        <NavigationPage>
+            <x:Arguments>
+                <pages:BaseTabbedPage Title="UVIZIO" >
+                    <pages:BaseTabbedPage.Resources>
+                        <ResourceDictionary>
+                            <DataTemplate x:Key="DeviceItemTemplate">
+                                <ViewCell>
+                                    <ViewCell.ContextActions>
+                                        <MenuItem Command="{Binding Path=BindingContext.DisconnectCommand, Source={x:Reference DevicePage}}"
+                            CommandParameter="{Binding .}" IsDestructive="True"
+                            Text="Disconnect"/>
+                                        <MenuItem Command="{Binding Path=BindingContext.CopyGuidCommand, Source={x:Reference DevicePage}}"
+                            CommandParameter="{Binding .}"
+                            Text="Copy Guid"/>
+                                        <MenuItem Command="{Binding Path=BindingContext.ConnectDisposeCommand, Source={x:Reference DevicePage}}"
+                            CommandParameter="{Binding .}"
+                            Text="Connect and Dispose"/>
+                                    </ViewCell.ContextActions>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition></ColumnDefinition>
+                                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.Triggers>
+                                            <DataTrigger TargetType="Grid"
+                                 Binding="{Binding IsConnected}"
+                                 Value="true">
+                                                <Setter Property="BackgroundColor" Value="#1A00FF00"></Setter>
+                                            </DataTrigger>
+                                        </Grid.Triggers>
+                                        <StackLayout Orientation="Vertical" VerticalOptions="Center">
+                                            <Label Text="{Binding Name}" FontSize="Large" />
+                                            <Label Text="{Binding Id, StringFormat='{0}'}" TextColor="Gray" FontSize="Small"/>
+                                        </StackLayout>
+                                        <Label Grid.Column="1"
+                         Margin="10"
+                         Text="{Binding Rssi}"
+                         VerticalTextAlignment="Center"></Label>
+                                    </Grid>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ResourceDictionary>
+                    </pages:BaseTabbedPage.Resources>
+                    <pages:BaseTabbedPage.Children>
+                        <pages:BasePage Title="Scan for devices">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"></RowDefinition>
+                                    <RowDefinition Height="*"></RowDefinition>
+                                    <RowDefinition Height="Auto"></RowDefinition>
+                                    <RowDefinition Height="Auto"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <StackLayout BackgroundColor="#FF6969" Padding="10" IsVisible="{Binding IsStateOn, Converter={StaticResource InverseBoolean}}">
+                                    <Label Text="{Binding StateText}" FontSize="18" HorizontalTextAlignment="Center"></Label>
+                                </StackLayout>
+
+                                <ListView Grid.Row="1" ItemsSource="{Binding Devices}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"
+                 IsPullToRefreshEnabled="True"
+                 RefreshCommand="{Binding RefreshCommand}"
+                 IsRefreshing="{Binding IsRefreshing, Mode=OneWay}"
+                 RowHeight="80"
+                 ItemTemplate="{StaticResource DeviceItemTemplate}">
+                                </ListView>
+
+
+                                <Label Grid.Row="2" Text="{Binding PreviousGuid, StringFormat='{0}'}" FontSize="Small" TextColor="Gray" VerticalTextAlignment="End"/>
+                                <StackLayout Grid.Row="3" Orientation="Horizontal">
+                                    <Button Text="Connect to previous" Command="{Binding ConnectToPreviousCommand}" HorizontalOptions="FillAndExpand"/>
+                                    <Button Text="Stop Scan" Command="{Binding StopScanCommand}" HorizontalOptions="End"/>
+                                    <ActivityIndicator IsRunning="{Binding IsRefreshing}"
+                             HeightRequest="24"
+                             WidthRequest="24"
+                             VerticalOptions="Center"
+                             HorizontalOptions="End"/>
+                                </StackLayout>
+
+                            </Grid>
+                        </pages:BasePage>
+                        <pages:BasePage Title="System devices">
+                            <ListView ItemsSource="{Binding SystemDevices}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"
+                 RowHeight="80"
+                 ItemTemplate="{StaticResource DeviceItemTemplate}"/>
+                        </pages:BasePage>
+                    </pages:BaseTabbedPage.Children>
+
+                </pages:BaseTabbedPage>
+            </x:Arguments>
+        </NavigationPage>
+    </MasterDetailPage.Detail>
+</pages:BaseMasterDetailPage>
+    
+
+
+<!--<?xml version="1.0" encoding="utf-8" ?>
+<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:pages="clr-namespace:BLE.Client.Pages;assembly=BLE.Client"
+             x:Class="BLE.Client.Pages.DeviceListPage"
+             Title="UVIZIO"
+             x:Name="DevicePage">
+  <pages:BasePage.Resources>
     <ResourceDictionary>
      <DataTemplate x:Key="DeviceItemTemplate">
               <ViewCell>
@@ -32,7 +144,7 @@
                       <Setter Property="BackgroundColor" Value="#1A00FF00"></Setter>
                     </DataTrigger>
                   </Grid.Triggers>
-                  <StackLayout Orientation="Vertical" VerticalOptions="Center">
+                  <StackLayout Orientation="Vertical" VerticalOptions="Center" >
                     <Label Text="{Binding Name}" FontSize="Large" />
                     <Label Text="{Binding Id, StringFormat='{0}'}" TextColor="Gray" FontSize="Small"/>
                   </StackLayout>
@@ -44,34 +156,63 @@
               </ViewCell>
             </DataTemplate>
       </ResourceDictionary>
-  </pages:BaseTabbedPage.Resources>
-  <pages:BaseTabbedPage.Children>
-    <pages:BasePage Title="Scan for devices">
+  </pages:BasePage.Resources>
+  
+    
       <Grid>
         <Grid.RowDefinitions>
           <RowDefinition Height="Auto"></RowDefinition>
           <RowDefinition Height="*"></RowDefinition>
-          <RowDefinition Height="Auto"></RowDefinition>
-          <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="#FF6969" Padding="10" IsVisible="{Binding IsStateOn, Converter={StaticResource InverseBoolean}}">
-          <Label Text="{Binding StateText}" FontSize="18" HorizontalTextAlignment="Center"></Label>
+        <StackLayout Grid.Row="0" BackgroundColor="#FF6969" Padding="10" IsVisible="{Binding IsStateOn, Converter={StaticResource InverseBoolean}}">
+          <Label  Text="{Binding StateText}" FontSize="18" HorizontalTextAlignment="Center" VerticalTextAlignment="End"></Label>
         </StackLayout>
 
-        <ListView Grid.Row="1" ItemsSource="{Binding Devices}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"
-                 IsPullToRefreshEnabled="True"
-                 RefreshCommand="{Binding RefreshCommand}"
-                 IsRefreshing="{Binding IsRefreshing, Mode=OneWay}"
-                 RowHeight="80"
-                 ItemTemplate="{StaticResource DeviceItemTemplate}">
-        </ListView>
+       
+          <ListView Grid.Row="1" ItemsSource="{Binding SystemDevices}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"
+                   RowHeight="80"
+                   ItemTemplate="{StaticResource DeviceItemTemplate}">
+            <ListView.Header>
+              <StackLayout Orientation="Vertical">
+                --><!--<Label Text="UVIZIO" TextColor="Black"  FontSize="Medium" HorizontalOptions="Start" Margin="5"/>--><!--
+                <BoxView HeightRequest="20"  />
+                <Label Text="Connection" TextColor="Black" FontSize="Large" HorizontalOptions="Center"/>
+                <BoxView HeightRequest="50"  />
+              </StackLayout>
+            </ListView.Header>
+          </ListView>
 
 
-        <Label Grid.Row="2" Text="{Binding PreviousGuid, StringFormat='{0}'}" FontSize="Small" TextColor="Gray" VerticalTextAlignment="End"/>
-        <StackLayout Grid.Row="3" Orientation="Horizontal">
-          <Button Text="Connect to previous" Command="{Binding ConnectToPreviousCommand}" HorizontalOptions="FillAndExpand"/>
-          <Button Text="Stop Scan" Command="{Binding StopScanCommand}" HorizontalOptions="End"/>
-          <ActivityIndicator IsRunning="{Binding IsRefreshing}"
+          <ListView Grid.Row="2" x:Name="discoverListV" ItemsSource="{Binding Devices}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"
+                   IsPullToRefreshEnabled="True"
+                   RefreshCommand="{Binding RefreshCommand}"
+                   IsRefreshing="{Binding IsRefreshing, Mode=OneWay}"
+                   RowHeight="80"
+                   ItemTemplate="{StaticResource DeviceItemTemplate}">
+
+          </ListView>
+
+        
+        
+          
+
+        
+
+
+        --><!--<Label Grid.Row="2" Text="{Binding PreviousGuid, StringFormat='{0}'}" FontSize="Small" TextColor="Gray" VerticalTextAlignment="End"/>--><!--
+        <StackLayout Grid.Row="4" Orientation="Horizontal">
+          
+          --><!--comment out the two button at the bottom-->
+          <!--<Button Text="Connect to previous" Command="{Binding ConnectToPreviousCommand}" HorizontalOptions="FillAndExpand"/>
+          <Button Text="Stop Scan" Command="{Binding StopScanCommand}" HorizontalOptions="End"/>--><!--
+            <Button   Text="discover" Command="{Binding RefreshCommand}" VerticalOptions="Center" HorizontalOptions="CenterAndExpand"
+                ></Button>
+
+
+            <ActivityIndicator IsRunning="{Binding IsRefreshing}"
                              HeightRequest="24"
                              WidthRequest="24"
                              VerticalOptions="Center"
@@ -79,12 +220,12 @@
         </StackLayout>
 
       </Grid>
-    </pages:BasePage>
-    <pages:BasePage Title="System devices">
+    --><!--<pages:BasePage Title="System devices">
        <ListView ItemsSource="{Binding SystemDevices}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"
                  RowHeight="80"
                  ItemTemplate="{StaticResource DeviceItemTemplate}"/>
-    </pages:BasePage>
-  </pages:BaseTabbedPage.Children>
+    </pages:BasePage>--><!--
+  
 
-</pages:BaseTabbedPage>
+</pages:BasePage>-->
+
