Change the pattern page to tabbed page. Still need to define:1.write function(binding writing functions to different modes. 2.Menu navigation(right now, every page is its own masterdetail page) 3.singleton pattern(right now using showViewModel to navigate).

--- a/BLE.Client/BLE.Client/Pages/DeviceListPage.xaml
+++ b/BLE.Client/BLE.Client/Pages/DeviceListPage.xaml
@@ -6,12 +6,32 @@
              Title="Discover devices"
              x:Name="DevicePage">
     <MasterDetailPage.Master>
-        <ContentPage Title = "Test">
-            <StackLayout>
-                <Button Text="Detail1" Command="togo" />
-                <Button Text="Detail2" />
-                <Button Text="Detail3" />
-            </StackLayout>
+        <ContentPage Title="Menu" BackgroundColor="Black"
+             BackgroundImage="menu_bg.png">
+            
+
+                <ContentPage.Resources>
+                    <ResourceDictionary>
+                        <DataTemplate x:Key="MenuItemTemplate">
+                            <ViewCell>
+                                
+
+                                    <Label Text="{Binding Title}" TextColor="White" FontSize="Large" HorizontalTextAlignment="Center"></Label>
+
+                                
+                            </ViewCell>
+                        </DataTemplate>
+                    </ResourceDictionary>
+                </ContentPage.Resources>
+
+            <ContentPage.Content>
+                <StackLayout Orientation="Vertical" VerticalOptions="CenterAndExpand" >
+                    <ListView x:Name="listView" SeparatorColor="Transparent" SeparatorVisibility="None" ItemsSource="{Binding MenuItems}" ItemTemplate="{StaticResource MenuItemTemplate}" VerticalOptions="FillAndExpand"  RowHeight="100"  HorizontalOptions="CenterAndExpand"  >
+
+                    </ListView>
+                </StackLayout>
+
+            </ContentPage.Content>
         </ContentPage>
     </MasterDetailPage.Master>
 
